--- a/app.yaml
+++ b/app.yaml
@@ -7,7 +7,9 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /tasks/process/.*
+  script: cronprocesstasks.py
+  login: admin
+
 - url: .*
   script: main.py
-  
-
