--- a/cron.yaml
+++ b/cron.yaml
@@ -9,7 +9,7 @@ cron:
   schedule: every 10 minutes
 #  schedule: every 1 minutes
 
-#- description: AddForecastFetcherTask 
-#  url: /cron/process/AddForecastFetcherTask
+- description: AddAvalancheConditionsFetcherTask 
+  url: /tasks/process/AvalancheConditionsFetcher
+  schedule: every 24 hours 11:00
 #  schedule: every 1 minutes
-#  schedule: every 24 hours 11:00
