--- a/queue.yaml
+++ b/queue.yaml
@@ -8,3 +8,6 @@ queue:
 - name: i80ConditionsFetcher
   rate: 5/s
   bucket_size: 10
+- name: AvalancheConditionsFetcher
+  rate: 5/s
+  bucket_size: 10
