Revert "adding some fixes and an update to the UI for lane."
This reverts commit 0dad7c452a0f279bfd8af563a3e9e48844c94861.

--- a/cron.yaml
+++ b/cron.yaml
@@ -9,7 +9,7 @@ cron:
   schedule: every 10 minutes
 #  schedule: every 1 minutes
 
-- description: AddAvalancheConditionsFetcherTask 
-  url: /tasks/process/AvalancheConditionsFetcher
-  schedule: every 24 hours 11:00
+#- description: AddForecastFetcherTask 
+#  url: /cron/process/AddForecastFetcherTask
 #  schedule: every 1 minutes
+#  schedule: every 24 hours 11:00
