--- a/cron.yaml
+++ b/cron.yaml
@@ -40,9 +40,10 @@ cron:
   schedule: every 1 hours
 #  schedule: every 1 minutes
 
-- description: BulkDeleter
-  url: /tasks/process/BulkDeleter
-  schedule: every 3 hours
+### Commented out temporarily
+##- description: BulkDeleter
+##  url: /tasks/process/BulkDeleter
+##  schedule: every 3 hours
 #  schedule: every 1 minutes
 
 - description: StoredWeatherProcesser 
@@ -52,7 +53,7 @@ cron:
 
 - description: YesterdayWeatherProcesser 
   url: /tasks/process/YesterdayWeatherProcesser
-  schedule: every 2 hours
+  schedule: every 24 hours 09:17
 #  schedule: every 1 minutes
 
 - description: YahooWeatherFetcher 
