--- a/cron.yaml
+++ b/cron.yaml
@@ -41,27 +41,32 @@ cron:
 #  schedule: every 1 minutes
 
 ### Commented out temporarily
+
 ##- description: BulkDeleter
 ##  url: /tasks/process/BulkDeleter
 ##  schedule: every 3 hours
 #  schedule: every 1 minutes
 
-- description: StoredWeatherProcesser 
-  url: /tasks/process/StoredWeatherProcesser
-  schedule: every 24 hours 08:04
+### Commenting out because pushes can prevent this from running
+
+##- description: StoredWeatherProcesser 
+##  url: /tasks/process/StoredWeatherProcesser
+##  schedule: every 24 hours 08:04
 #  schedule: every 1 minutes
 
-- description: YesterdayWeatherProcesser 
-  url: /tasks/process/YesterdayWeatherProcesser
-  schedule: every 24 hours 09:17
+##- description: YesterdayWeatherProcesser 
+##  url: /tasks/process/YesterdayWeatherProcesser
+##  schedule: every 24 hours 09:17
 #  schedule: every 1 minutes
 
-- description: SnowFallGraphCreater 
-  url: /tasks/process/SnowFallGraphCreater
-  schedule: every 24 hours 10:17
+##- description: SnowFallGraphCreater 
+##  url: /tasks/process/SnowFallGraphCreater
+##  schedule: every 24 hours 10:17
 #  schedule: every 1 minutes
 
-- description: YahooWeatherFetcher 
-  url: /tasks/process/YahooWeatherFetcher
-  schedule: every 1 hours
+### Attempting to replace with AddHourlyTask
+
+##- description: YahooWeatherFetcher 
+##  url: /tasks/process/YahooWeatherFetcher
+##  schedule: every 1 hours
 #  schedule: every 1 minutes
